fixed rss news jumping

--- a/GT-Info/src/components/Carousel/Carousel.module.scss
+++ b/GT-Info/src/components/Carousel/Carousel.module.scss
@@ -7,6 +7,7 @@
 
   .item {
     width: 100%;
+    height: 100%;
   }
 
   .dots {
