--- a/GT-Info/src/components/DateAndTime/DateAndTime.module.scss
+++ b/GT-Info/src/components/DateAndTime/DateAndTime.module.scss
@@ -18,6 +18,7 @@
     font-size: 6vw;
     margin: 0;
     padding: 0;
+    font-family: globals.$main-font;
   }
 }
 .weatherDate {
