--- a/GT-Info/src/styles/globals.scss
+++ b/GT-Info/src/styles/globals.scss
@@ -13,7 +13,7 @@ $text-color: #FFFFFF;
 
 // borders
 $container-border-radius: 1vw;
-$text-bottom-border: 3px solid $text-color;
+$text-bottom-border: 0.5vh solid $text-color;
 
 // fonts
 
